--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,17 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inder', sans-serif;
+  font-family: "Inder", sans-serif;
 }
 
 body {
-  background-color: #9D91FF;
+  background-color: #9d91ff;
 }
 
 .container {
   width: 100%;
   height: 100%;
-  padding: 32px;
+  padding: 16px 16px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -37,19 +37,21 @@ body {
 
 .header h1 {
   flex: 3;
-  font-size: 24px;
+  font-size: 20px;
+  text-align: center;
   color: #000072;
+  display: inline-block;
 }
 
 .timer span {
   font-size: 120px;
   display: block;
   color: #000072;
-  margin: 24px 0;
+  margin: 0 0 24px;
 }
 
 .btn {
-  background-color: #E9BB47;
+  background-color: #e9bb47;
   border-radius: 8px;
   padding: 6px 10px;
   font-size: 20px;
@@ -58,54 +60,64 @@ body {
 }
 
 .choices-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 .choice {
-  background-color: #E9BB47;
+  background-color: #e9bb47;
   border-radius: 8px;
   padding: 6px 10px;
-  font-size: 20px;
+  font-size: 16px;
   width: 48%;
   margin: 8px 0;
   text-align: center;
   cursor: pointer;
 }
 
-.btn:disabled {
-  cursor: not-allowed;
+.choice:hover,
+.btn:hover {
+  opacity: 0.9;
 }
 
 .question {
   color: #000072;
-  font-size: 24px;
+  font-size: 20px;
   margin: 24px 0;
-  height: 150px;
+  height: 100px;
+  width: 100%;
   text-align: center;
 }
 
 .score {
   font-size: 20px;
-  height: 100px;
-  color: #FFF500;
+  color: #fff500;
 }
 
 .answer-form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 24px;
+  align-items: center;
+  margin-top: 42px;
 }
 
-.answer-form .input {
+.text-container {
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.text-container .input {
   font-size: 16px;
   padding: 6px;
   border-radius: 8px;
   outline: none;
+  width: 100%;
 }
 
-.answer-form .submit-btn {
+.text-container .submit-btn {
   width: 100%;
-  margin: 12px 0;
 }
